# criterion_playground

./: CMakeLists.txt  LICENSE  README.md  library.h
.cmake/Modules/: Criterion.cmake
.github/workflows/: cmake.yml
src/: CMakeLists.txt  library.c  library.h
tests/: CMakeLists.txt  library_test.c
